# todo-full-stack-III

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md
.claude/: settings.local.json
.claude/agents/: better-auth-agent.md  fastapi-backend-agent.md  neon-postgres-agent.md  nextjs-frontend-agent.md
.claude/skills/better-auth-jwt/: SKILL.md
.specify/memory/: constitution.md
backend/: API_DOCUMENTATION.md  README.md  auth.py  config.py  db.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  todo_test.db
backend/alembic/versions/: 001_add_conversation_message_tables.py
backend/routes/: auth.py  tasks.py
backend/src/api/: chat_api.py
backend/src/models/: __init__.py  conversation.py  message.py  tool_invocation.py
backend/src/services/: agent_service.py  auth.py  database.py  db_service.py  mcp_server.py
backend/src/tools/: mcp_tools.py
backend/tests/: conftest.py  test_mcp.py  test_tasks.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
history/adr/: ADR-001-backend-technology-stack.md  ADR-002-authentication-approach.md  ADR-003-project-structure.md
specs/001-ai-agent-chatkit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mcp-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+65 files in other folders)
